welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: '(' expected but 'true' found.
	while true
              ^